# cppdev

./: .gitignore  README.md  shareptr.cpp  shareptr2.cpp  shareptr3.cpp
calc/: CMakeLists.txt  calc_stats.sh
calc/sql/: calcMedian_maxAmount.sql  calcMedian_meanAmount.sql  calcMedian_medianAmount.sql  oddlot.db
calc/src/: CMakeLists.txt  calc.cpp  calc.h  write2db.h
calc/tests/: CMakeLists.txt  test_calc.cpp
study/: String.h  uniqueptr.cpp
study/Ordered_list/: CMakeLists.txt
study/Ordered_list/src/: CMakeLists.txt  Ordered_list.h
study/Ordered_list/test/: CMakeLists.txt  Ordered_list_test.cpp  Ordered_list_test_constIt.cpp
study/String/: CMakeLists.txt
study/String/src/: CMakeLists.txt  String.cpp  String.h  StringAllocator.h
study/String/tests/: CMakeLists.txt  MockAllocator.h  StringTest.cpp  StringTest2.cpp  StringTestException.cpp
study/packet_validator/: CMakeLists.txt
study/packet_validator/src/: CMakeLists.txt  packet_validator.cpp  packet_validator.h  packet_validator_old.h
study/packet_validator/test/: CMakeLists.txt  packet_validator_test.cpp
study/string/: CMakeLists.txt  note
study/string/src/: CMakeLists.txt  String.h
